Add Button Label Strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="longitude">Longitude</string>
     <string name="address">Address</string>
     <string name="id">ID</string>
+    <string name="remove">REMOVE</string>
+    <string name="update">UPDATE</string>
+    <string name="delete">DELETE</string>
 </resources>
