Implement Create New Shop

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="remove">REMOVE</string>
     <string name="update">UPDATE</string>
     <string name="delete">DELETE</string>
+    <string name="create">CREATE</string>
+    <string name="hint_address">住所</string>
+    <string name="hint_longitude">経度</string>
+    <string name="hint_latitude">緯度</string>
+    <string name="hint_shop_name">店舗名</string>
 </resources>
