--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="hint_longitude">経度</string>
     <string name="hint_latitude">緯度</string>
     <string name="hint_shop_name">店舗名</string>
+    <string name="hint_maker_name">メーカー名</string>
 </resources>
