--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="hint_latitude">緯度</string>
     <string name="hint_shop_name">店舗名</string>
     <string name="hint_maker_name">メーカー名</string>
+    <string name="hint_main_category_name">メインカテゴリー名</string>
 </resources>
